--- a/Website/phone_website-master/index.html
+++ b/Website/phone_website-master/index.html
@@ -20,7 +20,7 @@
   <!-- Custom StyleSheet -->
   <link rel="stylesheet" href="styles.css" />
 
-  <title>Phone Shop</title>
+  <title>E-commerce Website</title>
 </head>
 
 <body>
