--- a/Website/phone_website-master/index.html
+++ b/Website/phone_website-master/index.html
@@ -37,8 +37,8 @@
           </div>
 
           <div class="nav__logo">
+            <img src="./images/logo.png" alt="">
             <a href="/" class="scroll-link">
-              PHONE
             </a>
           </div>
 
@@ -59,7 +59,7 @@
                 <a href="#category" class="nav__link scroll-link">Category</a>
               </li>
               <li class="nav__item">
-                <a href="#news" class="nav__link scroll-link">Blog</a>
+                <a href="#news" class="nav__link scroll-link">Products</a>
               </li>
               <li class="nav__item">
                 <a href="#contact" class="nav__link scroll-link">Contact</a>
@@ -99,14 +99,13 @@
             <li class="glide__slide">
               <div class="hero__center">
                 <div class="hero__left">
-                  <span class="">New Inspiration 2020</span>
-                  <h1 class="">PHONES MADE FOR YOU!</h1>
-                  <p>Trending from mobile and headphone style collection</p>
-                  <a href="#"><button class="hero__btn">SHOP NOW</button></a>
+                  <!-- <span class="">New Inspiration 2020</span> -->
+                  <h1 class="">PREMIUM QUALITY</h1>
+                  <h2 class="">Weighing Scales</h2>
                 </div>
                 <div class="hero__right">
                   <div class="hero__img-container">
-                    <img class="banner_01" src="./images/banner_01.png" alt="banner2" />
+                    <img class="banner_01" src="./images/img.png" alt="img" />
                   </div>
                 </div>
               </div>
@@ -114,13 +113,48 @@
             <li class="glide__slide">
               <div class="hero__center">
                 <div class="hero__left">
-                  <span>New Inspiration 2020</span>
-                  <h1>PHONES MADE FOR YOU!</h1>
-                  <p>Trending from mobile and headphone style collection</p>
-                  <a href="#"><button class="hero__btn">SHOP NOW</button></a>
+                  <!-- <span>New Inspiration 2020</span> -->
+                  <h1>ASSURED QUALITY <br> AND DURABLE</h1>
+                  <h2 class="">Weighing Scales</h2>
                 </div>
                 <div class="hero__right">
-                  <img class="banner_02" src="./images/banner_02.png" alt="banner2" />
+                  <img class="banner_01" src="./images/img1.png" alt="img1" />
+                </div>
+              </div>
+            </li>
+            <li class="glide__slide">
+              <div class="hero__center">
+                <div class="hero__left">
+                  <!-- <span>New Inspiration 2020</span> -->
+                  <h1>NOW PERFECTLY MEASURE<br> WITH OUR </h1>
+                  <h2 class="">Weighing Scales</h2>
+                </div>
+                <div class="hero__right">
+                  <img class="banner_01" src="./images/img2.png" alt="img2" />
+                </div>
+              </div>
+            </li>
+            <li class="glide__slide">
+              <div class="hero__center">
+                <div class="hero__left">
+                  <!-- <span>New Inspiration 2020</span> -->
+                  <h1>PRECISE AND ACCURATE</h1>
+                  <h2 class="">Weighing Scales</h2>
+                </div>
+                <div class="hero__right">
+                  <img class="banner_01" src="./images/img3.png" alt="img3" />
+                </div>
+              </div>
+            </li>
+            <li class="glide__slide">
+              <div class="hero__center">
+                <div class="hero__left">
+                  <!-- <span>New Inspiration 2020</span> -->
+                  <h1>WIDEST VARIETY OF QUALITY</h1>
+                  <h2 class="">Weighing Scales</h2>
+                </div>
+                <div class="hero__right">
+                  <img class="banner_01" src="./images/img4.png" alt="img4" />
                 </div>
               </div>
             </li>
@@ -129,6 +163,9 @@
         <div class="glide__bullets" data-glide-el="controls[nav]">
           <button class="glide__bullet" data-glide-dir="=0"></button>
           <button class="glide__bullet" data-glide-dir="=1"></button>
+          <button class="glide__bullet" data-glide-dir="=2"></button>
+          <button class="glide__bullet" data-glide-dir="=3"></button>
+          <button class="glide__bullet" data-glide-dir="=4"></button>
         </div>
 
         <div class="glide__arrows" data-glide-el="controls">
@@ -1096,7 +1133,7 @@
 
 
   <!-- Glide Carousel Script -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/glide.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/glide.min.js"></script>
   <!-- Animate On Scroll -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
