Contact page added

--- a/Website/phone_website-master/index.html
+++ b/Website/phone_website-master/index.html
@@ -982,33 +982,33 @@
 
   <!-- End Main -->
 
-  <!-- Footer -->
-  <footer id="footer" class="section footer">
+   <!-- Footer -->
+   <footer id="footer" class="section footer">
     <div class="container">
       <div class="footer__top">
-        <div class="footer-top__box">
-          <h3>EXTRAS</h3>
-          <a href="#">Brands</a>
-          <a href="#">Gift Certificates</a>
-          <a href="#">Affiliate</a>
-          <a href="#">Specials</a>
-          <a href="#">Site Map</a>
-        </div>
         <div class="footer-top__box">
           <h3>INFORMATION</h3>
           <a href="#">About Us</a>
           <a href="#">Privacy Policy</a>
           <a href="#">Terms & Conditions</a>
           <a href="#">Contact Us</a>
-          <a href="#">Site Map</a>
+          <a href="brochure.pdf">Brochure</a>
         </div>
         <div class="footer-top__box">
-          <h3>MY ACCOUNT</h3>
-          <a href="#">My Account</a>
-          <a href="#">Order History</a>
-          <a href="#">Wish List</a>
-          <a href="#">Newsletter</a>
-          <a href="#">Returns</a>
+          <h3>PAYMENT MODES</h3>
+          <a href="#">Net Banking</a>
+          <a href="#">Cash On Delivery</a>
+          <a href="#">EMI Conversion</a>
+          <a href="#">E-Gift Voucher</a>
+          <a href="#">Credit Card/Debit Card</a>
+        </div>
+        <div class="footer-top__box">
+          <h3>QUICK LINKS</h3>
+          <a href="#">Home</a>
+          <a href="#">Category</a>
+          <a href="#">Blog</a>
+          <a href="#">Contact</a>
+        
         </div>
         <div class="footer-top__box">
           <h3>CONTACT US</h3>
@@ -1018,33 +1018,44 @@
                 <use xlink:href="./images/sprite.svg#icon-location"></use>
               </svg>
             </span>
-            42 Dream House, Dreammy street, 7131 Dreamville, USA
+            MJ Market near Nagvekar Automobile,Rajaram Road, Kolhapur
           </div>
-          <div>
+          <!-- <div>
             <span>
               <svg>
-                <use xlink:href="./images/sprite.svg#icon-envelop"></use>
+                 <use xlink:href="./images/sprite.svg#icon-envelop"></use> 
+                <a href="https://goo.gl/maps/GRwrPvziEjTy4NLA9">directions</a>
               </svg>
             </span>
-            company@gmail.com
-          </div>
+           directions
+          </div> -->
           <div>
             <span>
               <svg>
                 <use xlink:href="./images/sprite.svg#icon-phone"></use>
               </svg>
             </span>
-            456-456-4512
+            9977539098,8600349494
           </div>
-          <div>
-            <span>
-              <svg>
-                <use xlink:href="./images/sprite.svg#icon-paperplane"></use>
-              </svg>
-            </span>
-            Dream City, USA
-          </div>
-        </div>
+      </div>
+      <!-- <div class="footer-top__box">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3821.6114255162906!2d74.23322406466036!3d16.696317138496244!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc1003e4b8f6be1%3A0x733364a0d284b103!2sShri%20Kumbhar%20Enterprises!5e0!3m2!1sen!2sin!4v1640962920295!5m2!1sen!2sin"  style="margin-left:70px" width="350" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      </div> -->
+      
+      <!-- <div class="footer-top__box"> -->
+        <!-- <div class="footer-top__box">
+          <input type="text" name="login_field" value="" class="be-input FM_benords beW3 beh32 inPlace" placeholder="Enter your mobile" maxlength="10" style="" request="0">
+
+
+          <div id="t0401_reqbox" class="bepdpreq bemt15 "><div class=""><label class="FM_be-lbl" id="t0401_textarea">Requirement Details</label></div><div id="" class="betarea" data-role="" style="width: 300px"><textarea id="t0401_reqBoxTemplates" class="FM_be-slbox be-txtarea" placeholder="Additional details about your requirement..."></textarea></div></div>
+      </div> -->
+      <!-- <label for="pno">Phone Number</label>
+      <textarea id="pno" name="phone" placeholder="Phone Number"></textarea> 
+      <label for="subject">Subject</label>
+    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea> -->
+
+    <!-- <input type="submit" value="Submit">
+      -->
       </div>
     </div>
     <div class="footer__bottom">
@@ -1058,6 +1069,7 @@
     </div>
   </footer>
   <!-- End Footer -->
+
 
   <!-- PopUp -->
   <div class="popup hide__popup">
