--- a/Website/phone_website-master/index.html
+++ b/Website/phone_website-master/index.html
@@ -1097,7 +1097,7 @@
   <!-- End Footer -->
 
   <!-- PopUp -->
-  <div class="popup hide__popup">
+  <!-- <div class="popup hide__popup">
     <div class="popup__content">
       <div class="popup__close">
         <svg>
@@ -1121,7 +1121,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!-- Go To -->
 
