--- a/Website/phone_website-master/index.html
+++ b/Website/phone_website-master/index.html
@@ -36,8 +36,8 @@
             </svg>
           </div>
 
-          <div class="nav__logo">
-            <img src="./images/logo.png" alt="">
+          <div class="nav__logo" style="height: 100%;">
+            <img src="./images/logo.png" alt="" height="100%">
             <a href="/" class="scroll-link">
             </a>
           </div>
@@ -57,6 +57,9 @@
               </li>
               <li class="nav__item">
                 <a href="#category" class="nav__link scroll-link">Category</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link scroll-link">About&nbsp;us</a>
               </li>
               <li class="nav__item">
                 <a href="#news" class="nav__link scroll-link">Products</a>
