Company Name in phone section addeed

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
                     <div class="nav__menu">
                         <div class="menu__top">
-                            <span class="nav__category">PHONE</span>
+                            <span class="nav__category">Shree&nbsp;Kumbhar&nbsp;Enterprises</span>
                             <a href="#" class="close__toggle">
                                 <svg>
                                     <use xlink:href="./images/sprite.svg#icon-cross"></use>
