Added More Option

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet" />
 
-    <link rel ="icon" type="icon" href="./images/products/favicon.ico">
+    <link rel="icon" type="icon" href="./images/products/favicon.ico">
 
 
     <!-- Carousel -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/css/glide.core.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/css/glide.theme.min.css
-">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/css/glide.theme.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <!-- Custom StyleSheet -->
@@ -78,8 +78,7 @@
                         </a>
 
                         <a href="brochure.pdf" class="icon__item">
-                            <svg class="icon__search" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
-                                y="0px" viewBox="0 0 485 485" style="enable-background:new 0 0 485 485;" xml:space="preserve">
+                            <svg class="icon__search" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 485 485" style="enable-background:new 0 0 485 485;" xml:space="preserve">
                                 <g>
                                     <g>
                                         <path
@@ -786,16 +785,56 @@
                                 </div>
                             </div>
 
-                            <div class="section__titles">
+                            <!-- <div class="section__titles">
                                 <div class="section__title filter-btn" data-id="Libra Weighing Scale">
                                     <span class="dot"></span>
                                     <h1 class="primary__title">Libra Weighing Scale</h1>
                                 </div>
-                            </div>
+                            </div> -->
+                            <div class="section__titles">
+                                <div class="section__title filter-btn">
+                                    <span class="dot"></span>
+                                    <div class="dropdown">
+                                        <button class="primary__title dropbtn">More
+                                            <i class="fa fa-caret-down"></i>
+                                        </button>
+                                        <div class="dropdown-content">
+                                            <ul>
+                                                <div class="section__title" data-id="Libra Weighing Scale">
+                                                    <li>Libra Weighing Scale</li>
+                                                </div>
 
+                                                <div class="section__title" data-id="Dairy Machinery Equipment">
+                                                    <li>Dairy Machinery Equipment</li>
+                                                </div>
+
+                                                <div class="section__title" data-id="Tank Weighing Scale">
+                                                    <li>Tank Weighing Scale</li>
+                                                </div>
+
+                                                <div class="section__title" data-id="Laboratory Weighing">
+                                                    <li>Laboratory Weighing</li>
+                                                </div>
+
+                                                <div class="section__title" data-id="Weighing Machine for kitchen">
+                                                    <li>Weighing Machine for kitchen</li>
+                                                </div>
+
+                                                <div class="section__title" data-id="Weighting Machine for Meat Shop">
+                                                    <li>Weighting Machine for Meat Shop</li>
+                                                </div>
+
+                                                <div class="section__title" data-id="All type of Milk Machine">
+                                                    <li>All type of Milk Machine</li>
+                                                </div>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
 
-                        <div class="title_flex">
+                        <!-- <div class="title_flex">
 
                             <div class="section__titles">
                                 <div class="section__title filter-btn" data-id="Dairy Machinery Equipment">
@@ -842,7 +881,7 @@
                                     <h1 class="primary__title">All type of Milk Machine</h1>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
                     </div>
                     <!-- </div> -->
