Droplist Bugs Fixed

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             </svg>
                         </a>
 
-                        <a href="brochure.pdf" class="icon__item">
+                        <a href="brochure.pdf" target="_blank" class="icon__item">
                             <svg class="icon__search" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 485 485" style="enable-background:new 0 0 485 485;" xml:space="preserve">
                                 <g>
                                     <g>
@@ -793,42 +793,45 @@
                             </div> -->
                             <div class="section__titles">
                                 <div class="section__title filter-btn">
-                                    <span class="dot"></span>
                                     <div class="dropdown">
-                                        <button class="primary__title dropbtn">More
-                                            <i class="fa fa-caret-down"></i>
+                                        <button class="dropbtn primary__title" style="padding-left: 14px;" id="myBtn" value="Flase" onclick="myFunction()">Show More&nbsp;&nbsp;&#8595;
+                                            <!-- <i id="down" class="fa fa-caret-down"></i>
+                                            <i id="up" class="fa fa-caret-up"></i> -->
                                         </button>
-                                        <div class="dropdown-content">
+                                        <div class="dropdown-content" id="more">
                                             <ul>
-                                                <div class="section__title" data-id="Libra Weighing Scale">
+                                                <div class="section__title filter-btn" style="display: block;" data-id="Libra Weighing Scale">
                                                     <li>Libra Weighing Scale</li>
                                                 </div>
 
-                                                <div class="section__title" data-id="Dairy Machinery Equipment">
+                                                <div class="section__title filter-btn" style="display: block;" data-id="Dairy Machinery Equipment">
                                                     <li>Dairy Machinery Equipment</li>
                                                 </div>
 
-                                                <div class="section__title" data-id="Tank Weighing Scale">
+                                                <div class="section__title  filter-btn" style="display: block;" data-id="Tank Weighing Scale">
                                                     <li>Tank Weighing Scale</li>
                                                 </div>
 
-                                                <div class="section__title" data-id="Laboratory Weighing">
+                                                <div class="section__title filter-btn" style="display: block;" data-id="Laboratory Weighing">
                                                     <li>Laboratory Weighing</li>
                                                 </div>
 
-                                                <div class="section__title" data-id="Weighing Machine for kitchen">
+                                                <div class="section__title filter-btn" style="display: block;" data-id="Weighing Machine for kitchen">
                                                     <li>Weighing Machine for kitchen</li>
+
                                                 </div>
 
-                                                <div class="section__title" data-id="Weighting Machine for Meat Shop">
+                                                <div class="section__title filter-btn" style="display: block;" data-id="Weighting Machine for Meat Shop">
                                                     <li>Weighting Machine for Meat Shop</li>
                                                 </div>
 
-                                                <div class="section__title" data-id="All type of Milk Machine">
+                                                <div class="section__title filter-btn" style="display: block;" data-id="All type of Milk Machine">
                                                     <li>All type of Milk Machine</li>
                                                 </div>
                                             </ul>
+
                                         </div>
+
                                     </div>
                                 </div>
                             </div>
